Upraveno zadání práce

--- a/zprava/zprava.tex
+++ b/zprava/zprava.tex
@@ -34,8 +34,7 @@ sekundární vyhledávání na libovolná metadata.}
 \subsection{Vstup}
 \par{Klíčové slovo, sada hodnot metadat pro setřídění a počet výsledků (omezení velikosti výstupu).}
 \subsection{Výstup}
-\par{Videa, jejichž popis odpovídá klíčovému slovu. Videa budou setříděna podle vzdálenosti ke zvoleným
-metadatům.}
+\par{Videa, jejichž popis odpovídá klíčovému slovu. V levém sloupci jsou videa v původním nepřerankovaném pořadí, v pravém sloupci jsou videa setříděna podle vzdálennosti ke zvoleným metadatům.}
 
 \section{Způsob řešení}
 \subsection{Komunikace s Youtube API}
